# TRayTracer

./: CMakeLists.txt  camera.cpp  camera.h  directional_light.h  geometry.cpp  geometry.h  intersection.cpp  intersection.h  light.cpp  light.h  main.cpp  math_util.h  point_light.h  ray.cpp  ray.h  sphere.h  string_util.h  transform.cpp  transform.h  triangle.h
